<resources>
    <string name="app_name">Eyepetzier</string>
    <string name="view_foot_fgmt_feed_tv_text">查 看 更 多 精 选</string>

    <string name="app_font_family">monospace</string>

    <string-array name="tab_titles">
        <item>精选</item>
        <item>发现</item>
        <item>作者</item>
        <item>我的</item>
    </string-array>
    <string name="tab_feed">精选</string>
    <string name="tab_discovery">发现</string>
    <string name="tab_author">作者</string>
    <string name="tab_mine">我的</string>
    <string name="feed_fgmt_imgv_content_description">feed fgmt image</string>

    <string name="acty_feed2nd_review_tv_title">每日精选</string>
    <string name="acty_feed2nd_review_tv_time">Today</string>

    <string name="mine_login_text">点击登录即可发表评论</string>
    <string name="mine_my_collection_text">我的收藏</string>
    <string name="mine_my_comment_text">我的评论</string>
    <string name="mine_my_message_text">我的消息</string>
    <string name="mine_my_cache_text">我的缓存</string>
    <string name="mine_my_suggestion_text">意见反馈</string>
    <string name="mine_my_contribution_text">我要投稿</string>

    <string name="search_text">取消</string>
    <string name="search_content_text">输入标题或描述中的关键词找到更多的视频</string>
    <string name="search_hot_text">- 热门搜索词 -</string>
    <string name="video_activity_cache">缓存</string>
    <string name="search_result">搜索结果共</string>
    <string name="search_result_num">个 -</string>

    <string name="coment_acty_write_comment">写下你的评论</string>
    <string name="item_rv_coment_acty_tv_hot">- hot -</string>
    <string name="all_3rd_more_acty_footview_tv_end">- The End -</string>
    <string name="download_pre">缓存</string>
    <string name="download_aty_title">我的缓存</string>
    <string name="download_aty_edit">编辑</string>
    <string name="download_aty_auto_download">日报自动缓存</string>
    <string name="download_aty_byself_download">手动缓存</string>
    <string name="download_aty_item_downloaded">已缓存</string>

    <string name="welcome_aty_title">开眼</string>
    <string name="welcome_aty_msg">每日精选视频推介,让你大开眼界</string>
</resources>
