<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/mine_fragment_login_tv"
            style="@style/MineFragmentStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/mine_fragment_margin"
            android:drawablePadding="@dimen/mine_fragment_margin"
            android:drawableTop="@mipmap/pgc_default_avatar"
            android:text="@string/mine_login_text" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/mine_fragment_collection_tv"
                style="@style/MineFragmentStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:drawableLeft="@mipmap/ic_action_favorites_grey_without_padding"
                android:drawablePadding="@dimen/mine_fragment_drawable_padding"
                android:paddingLeft="@dimen/mine_fragment_text_padding_collection"
                android:text="@string/mine_my_collection_text" />

            <ImageView
                style="@style/MineFragmentStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/line" />

            <TextView
                android:id="@+id/mine_fragment_comment_tv"
                style="@style/MineFragmentStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableLeft="@mipmap/ic_action_reply_grey_without_padding"
                android:drawablePadding="@dimen/mine_fragment_drawable_padding"
                android:text="@string/mine_my_comment_text" />
        </LinearLayout>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/line_height"
        android:background="@color/line"

        />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:id="@+id/mine_fragment_message_tv"
                style="@style/MineFragmentStyleDown"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/mine_my_message_text" />

            <TextView
                android:id="@+id/mine_fragment_cache_tv"
                style="@style/MineFragmentStyleDown"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/mine_my_cache_text" />

            <TextView
                android:id="@+id/mine_fragment_suggestion_tv"
                style="@style/MineFragmentStyleDown"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/mine_my_suggestion_text" />

            <TextView
                android:id="@+id/mine_fragment_contribution_tv"
                style="@style/MineFragmentStyleDown"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/mine_my_contribution_text" />
        </LinearLayout>
    </ScrollView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/mine_fragment_margin"
        android:gravity="center"
        android:text="Version 2.4.1.126"
        android:textColor="@color/mine_fragment_version_text_color"
        android:textSize="@dimen/mine_fragment_version_text_size" />
</LinearLayout>