<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <RelativeLayout
        android:background="@color/bg"
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_height">

        <ImageView
            android:id="@+id/download_aty_back_iv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_action_back"
            />

        <TextView
            android:id="@+id/download_aty_title_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/download_aty_title"
            android:textSize="@dimen/download_ayt_title_size"
            android:textStyle="bold"
            />

        <TextView

            android:id="@+id/download_aty_edit_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/download_aty_margin"
            android:text="@string/download_aty_edit"
            android:textColor="@color/download_aty_text_color"
            android:textSize="@dimen/download_ayt_othre_size"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <TextView
            android:id="@+id/download_aty_byself_download_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_weight="1"
            android:text="@string/download_aty_byself_download"
            android:textColor="@color/download_aty_text_color"
            android:textSize="@dimen/download_ayt_othre_size"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/download_ayt_title_size"
            android:src="@mipmap/line"

            android:layout_margin="@dimen/download_aty_margin"
            />

        <TextView
            android:id="@+id/download_aty_auto_download_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_weight="1"
            android:text="@string/download_aty_auto_download"
            android:textColor="@color/download_aty_text_color"
            android:textSize="@dimen/download_ayt_othre_size"/>
    </LinearLayout>
    <android.support.v7.widget.RecyclerView
        android:id="@+id/download_aty_rv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
</LinearLayout>